css/style.css
html, body, ul, li, .site-header h1, .site-header p {
    padding: 0;
    margin: 0;
}

html {
    font-size: 62.5%;
}

body {
    background: #fff;
    font-family: Roboto, Arial, sans-serif;
    font-size:  1.6rem;
    line-height: 1.5;
    color: #333;
}



.content {
    max-width: 940px;
    padding: 0 20px;
    margin: 0 auto;
    box-sizing: border-box;
}

html, body {
    height: 100%;
}

.site-header {
    padding: 1em 0;
    background: rgba(255, 255, 255, 0.95);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.site-header h1{
    display: inline-block;
    max-width: 68%;
}

.site-header img {
    width: 203px;
    height: 40px;
    display: block;
    border:0;
    max-width: 100%;
}


.site-nav{
    padding: 10px 0 0;
}


@media all and (min-width:420px){
    .site-nav {
        float: right;
        padding: 5px 0;
    }
}


.site-navlist {
    list-style: none;
}

.page-link{
    text-decoration: none;
    background: #4ba7f8;
    color: #fff;
    padding: 5px 15px;
    border-radius: 3px
}

.page-link:after{
    content: ' ▶';
    font-size: 70%;
    line-height: 1;
    display: inline-block;
    vertical-align: middle;
    margin: 0 0 2px 7px;
    font-weight: 100;
}

.page-link:hover,
.page-link:focus {
    color: #4ba7f8;
    background: none;
    border: 2px solid #4ba7f8;
}

.buttons {
    text-align: right;
}

.section-opensource > header,
.section-twitter > header,
.post-header,
.section-latest > header{
    background: #333;
    /*background: radial-gradient(rgba(23, 33, 23, 0.7), rgba(53, 53, 53, 1));*/
}

@media all and (min-width:320px){
    .section-opensource > header,
    .section-twitter > header,
    .post-header,
    .section-latest > header{
         background: #545a61 url('../img/top-bg.jpg') no-repeat top center;
    }
}


.section-opensource,
.section-twitter {
    position: relative;
}

.section-opensource > header,
.section-twitter > header {
    padding: 3em 0;
    color: #fff;
    font-weight: 300;
}

.section-latest > header{
    padding: 3em 0;
}

.section-opensource section,
.section-latest section {
    padding: 2em 0;
}

.section-twitter section {
    background-color: rgba(255, 255, 255, 0.89);
    padding: 2em 0;
}

.section-title {
    margin: 0;
    font-size: 3rem;
    line-height: 1.1;
    color: #9ef490;
    font-weight: 100;
}


@media all and (min-width:480px){
    .section-title{
        font-size: 6rem;
    }

    .section-opensource > header,
    .section-twitter > header {
        font-size: 2rem;
    }
}



.repos-section {
    display: -webkit-flex;
    -webkit-flex-wrap: wrap;
    display: flex;
    flex-wrap: wrap;
}

.repos-box {
    margin: 0 10px;
    -webkit-flex: 1 1 200px;
    flex: 1 1 200px;
    border-radius: 5px;
}

.repos-box li{
    color: #333;
    margin: 15px 0;
}


.repos-box a {
    color: inherit;
    display: block;
    text-decoration: none;
    padding: 10px;
    background-size: 0;
    background-repeat: no-repeat;
    background-position: center;
    transition: background-size .3s ease-out;
}


.repos-box1 a {
    background-color: #90d7f4;
}
.repos-box2 a{
    background-color: #90f5d7
}

.repos-box3 a{
    background-color: #82c7e4
}

.repos-box4 a{
    background-color: #90aaf4
}


.repos-box a:hover,
.repos-box a:focus{
    background-size: 100%;
}

.repos-box1 a:hover,
.repos-box1 a:focus{
  background-image: radial-gradient(rgba(167, 230, 255, 1), #90d7f4);
}

.repos-box2 a:hover,
.repos-box2 a:focus{
  background-image: radial-gradient(rgba(209, 255, 241, 1),#90f5d7);
}

.repos-box3 a:hover,
.repos-box3 a:focus{
  background-image: radial-gradient(rgba(147, 223, 255, 1),#82c7e4);
}

.repos-box4 a:hover,
.repos-box4 a:focus{
  background-image: radial-gradient(rgba(191, 208, 255, 1), #90aaf4);
}



.repos-box .star-gazers a{
    padding: 5px 10px;
}

.repos-box > ul {
    list-style: none;
}

.repo-box {
    position: relative;
    font-size: 1.8rem;
}

.repo-box > header {
    max-width: 200px;
}

.repo-box > header:after {
    content: '';
    clear: both;
    display: table;
}

.repo-box h4 {
    margin: 0;
}

.star-gazers {
    color: #555;
    border-top: 1px solid rgba(0,0,0,0.07);
}

.star-gazers a:before {
    content:'★ ';
    font-size: 150%;
    line-height: 1;
}

.site-footer {
    border-top: 1px solid #ddd;
    padding: 2em 0;
}
.site-footer .site-title{
    margin: 8px 1em;
    display: block;
}
.site-footer .site-title img{
    height: 24px;
    width: 72px;
    vertical-align: middle;
}

.site-footer a {
    color: #999;
    text-decoration: none;
}

.site-footer li {
    list-style: none;
    display: inline-block;
    font-size: 1.4rem;
    margin: 0 1em;
}

.site-footer li span{
    display: inline-block;
    vertical-align: middle;
    padding-right: 5px;
}


.github-icon-svg,
.twitter-icon-svg ,
.rss-icon-svg {
    display: inline-block;
    width: 24px;
    height: 24px;
    position: relative;
    top: 3px;
    fill: #bbb;
    padding-bottom: 5px;
}

@media all and (min-width:760px){
    .github-icon-svg,
    .twitter-icon-svg ,
    .rss-icon-svg{
        width: 32px;
        height: 32px;
    }
    .site-footer {
        text-align: right;
    }

    .site-footer .site-title{
        float: left;
    }
}


.author-github-icon-svg,
.author-twitter-icon-svg {
    display: inline-block;
    height: 16px;
    position: relative;
    top: 3px;
    width: 16px;
}


/*========= Blog =====*/


/* Home styles */
/* ----------------------------------------------------------*/

.home h1 { margin-bottom: 25px; }

.posts { list-style-type: none; }

.posts li {
    background: #fff;
    margin: 0 0 30px 0;
    position: relative;
    padding: 20px;
}


.section-posts{
    background: #eee;
    padding: 2em 0;
}


.section-posts h2,
.repos-box > h3{
    color: #555;
    font-size: 2.4rem;
    font-weight: 400;
    padding: 0 0 1em 0;
    margin: 0;
}


.posts .post-link {
  font-size: 2.4rem;
  font-weight: 700;
  color: inherit;
  text-decoration: none;
}
/* ... */

